k8s/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  annotations:
    nginx.ingress.kubernetes.io/client-max-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: public
  rules:
    - host: webui.hitsai.local
      http:
        paths:
          - backend:
              service:
                name: open-webui
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: webui.hitsai.net
      http:
        paths:
          - backend:
              service:
                name: open-webui
                port:
                  number: 8080
            path: /
            pathType: Prefix
